# AIE7

./: .gitignore
00_AIM_Quicklinks/: README.md
00_Onramp/onramp03_Python_basics/: README.md  app_student_activities.py  llm_python_basics_extended.ipynb  pyproject.toml
05_Our_First_Agent_with_LangGraph/: .dockerignore 2  .gitignore  API_KEYS_FIX.md  DEPLOYMENT_SUMMARY 2.md  Dockerfile  Introduction_to_LangGraph_for_Agents_Assignment_Version 3.ipynb  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md  add_markdown.py  cloudbuild 2.yaml  cloudbuild-unified 2.yaml  deploy-unified 2.sh  deploy-unified-cloud-run 2.sh  deploy.sh  pyproject.toml  setup-env 2.sh
05_Our_First_Agent_with_LangGraph/api/: Dockerfile  ask.py  health.py  index.py  requirements.txt  test_keys.py
05_Our_First_Agent_with_LangGraph/frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
05_Our_First_Agent_with_LangGraph/frontend/app/: globals.css  layout.tsx  page.tsx
05_Our_First_Agent_with_LangGraph/frontend/lib/: config.ts
05_Our_First_Agent_with_LangGraph/frontend/public/: .gitkeep
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md  pyproject.toml
16_Production_RAG_and_Guardrails/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  README.md  activity3_safe.py  complete_activity3.py  debug_guardrails.py  pyproject.toml  simple_activity3.py
16_Production_RAG_and_Guardrails/cache/embeddings/: 13252c7e49de68b4d0fd666c84503a360015c2aa-99be-5fc3-b7d4-a2f6bdb928b9  13252c7e49de68b4d0fd666c84503a3602ee66c2-39fd-5b0a-9e1f-ffa7cafe93b6  13252c7e49de68b4d0fd666c84503a3603f84517-2f5c-586b-b9b6-fee90802420a  13252c7e49de68b4d0fd666c84503a3605c9ac74-0576-5f65-9612-10438f7fa9a8  13252c7e49de68b4d0fd666c84503a3605d70039-46d6-58fa-a23d-8e3265eaeac7  13252c7e49de68b4d0fd666c84503a3605ea97b9-fc8a-5cdc-836a-26db710c9125  13252c7e49de68b4d0fd666c84503a3606be9301-ec65-5d18-99c9-7fb6c790ebfa  13252c7e49de68b4d0fd666c84503a360911cf92-fe57-59ed-a643-fbe9188bc25c  13252c7e49de68b4d0fd666c84503a360e0803b6-8da6-5169-b820-a455d2bc582d  13252c7e49de68b4d0fd666c84503a360e7f52c7-3992-5a3a-b7a8-0a2c664f5950  (+267 more)
16_Production_RAG_and_Guardrails/langgraph_agent_lib/: __init__.py  agents.py  caching.py  models.py  rag.py
(+66 files in other folders)
